--- a/DZIEN_1_Fundamentals_Exploration/01_databricks_lakehouse_intro.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/01_databricks_lakehouse_intro.ipynb
@@ -1384,7 +1384,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d5d45e64-069d-4a60-b9b7-8d3fcb777f7e",
      "showTitle": false,
@@ -2353,7 +2356,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8151009896109070,
+     "commandId": 7683494960104680,
      "dataframes": [
       "_sqldf"
      ]
@@ -2371,21 +2374,21 @@
       "label": null,
       "name": "BRONZE_SCHEMA",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "bronze",
       "label": null,
       "name": "BRONZE_SCHEMA",
       "options": {
+       "widgetType": "text",
        "autoCreated": null,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     },
     "CATALOG": {
@@ -2397,21 +2400,21 @@
       "label": null,
       "name": "CATALOG",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "ecommerce_platform_trainer",
       "label": null,
       "name": "CATALOG",
       "options": {
+       "widgetType": "text",
        "autoCreated": null,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     }
    }
