--- a/DZIEN_1_Fundamentals_Exploration/02_data_import_exploration.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/02_data_import_exploration.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "## Kontekst biznesowy\n",
     "\n",
-    "Organizacja KION zarządza danymi z różnych źródeł:\n",
+    "Organizacja zarządza danymi z różnych źródeł:\n",
     "- **Klienci** - dane w formacie CSV\n",
     "- **Zamówienia** - dane w formacie JSON\n",
     "- **Produkty** - dane w formacie Parquet\n",
@@ -501,7 +501,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "10f0f50b-3fa1-452a-85fd-f0df5773f08c",
      "showTitle": false,
