--- a/DZIEN_1_Fundamentals_Exploration/05_views.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/05_views.ipynb
@@ -1314,7 +1314,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c168cf5e-fac5-4b84-96b1-91291e615ec6",
      "showTitle": false,
@@ -1347,7 +1350,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7365e3a1-9fa6-4077-b081-e399f6037ca4",
      "showTitle": false,
@@ -1915,7 +1921,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "05_views_workflows",
+   "notebookName": "05_views",
    "widgets": {}
   },
   "language_info": {
