--- a/DZIEN_3_Transformation_Governance_Integrations/02_lakeflow_pipelines.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/02_lakeflow_pipelines.ipynb
@@ -2,8 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "46a9b2e2",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c1297fb2-7aa7-454e-884e-7d100f753890",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "# Lakeflow Spark Declarative Pipelines - Demo\n",
     "\n",
@@ -20,8 +31,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1cb9bb0",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "38b63fab-c778-461e-8e12-2bb40d6703e7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Kontekst i wymagania\n",
     "\n",
@@ -40,8 +62,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14e58772",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "76ef371e-3db2-4942-b0e4-9690415b4d02",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Wstęp teoretyczny - Lakeflow Spark Declarative Pipelines\n",
     "\n",
@@ -178,8 +211,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4ab02b8",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f44a05c2-05f0-4095-aa47-7994f88c0419",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Izolacja per użytkownik\n",
     "\n",
@@ -188,9 +232,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "70d722c6",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "21b89975-086f-4205-ba28-b584620ec1de",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "%run ../00_setup"
@@ -198,8 +253,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65ea6b4e",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ba85972d-9ddb-4cc5-8a69-dde4ef27651e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Konfiguracja\n",
     "\n",
@@ -208,9 +274,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "70fca3a7",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "84b6bb78-bd75-4c53-b4be-25e2e1af8f2d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from pyspark.sql import functions as F\n",
@@ -241,8 +318,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5287c6a2",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5a93c5e5-5bac-45a3-802a-d3683fa75269",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -376,8 +464,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "595cb59b",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d221bda7-7e69-4ae1-9980-c98afff01f9a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 1.1: STREAMING TABLE - Bronze Layer Ingest\n",
     "\n",
@@ -391,9 +490,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6017b787",
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "594b11ff-a25f-4d82-957d-ad397f75102d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    },
     "vscode": {
      "languageId": "sql"
     }
@@ -410,9 +519,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1e2acaaa",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7aabe110-6e8e-4cfc-9d4c-b3f1aba36489",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 1.1 - Bronze Layer (tradycyjne podejście dla demonstracji)\n",
@@ -449,8 +569,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75496475",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "016f2855-b386-4fd5-8ea2-85a511dccde1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -473,8 +604,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9deef978",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a15b0a84-920c-4e59-8716-bdbc3e8913b8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 2.1: MATERIALIZED VIEW z Expectations (Silver Layer)\n",
     "\n",
@@ -522,9 +664,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "de267dc4",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "28c31e9d-dff0-45d2-8ab2-89e96d077364",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 2.1 - Silver Layer z data quality (tradycyjne podejście dla demo)\n",
@@ -590,8 +743,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e05f3ab1",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "100b5e45-bc21-43d1-8da6-cf4287a6106d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -614,8 +778,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "948c880a",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ddf6416f-11bc-4b6b-8a3b-7bd9c649a30f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 3.1: MATERIALIZED VIEW dla Gold (Daily Aggregates)\n",
     "\n",
@@ -656,9 +831,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a1237813",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "431625e6-c7b6-4600-85d5-799bf7a4b9ff",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 3.1 - Gold Layer (Daily Aggregates)\n",
@@ -720,8 +906,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b306ee51",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "cb5eaa33-42b4-42a5-849b-201efc47335e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -749,8 +946,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeebaae1",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8c6f3181-889c-4ecf-97ad-58a61fee4bc6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 4.1: Event Log - Monitoring i Lineage\n",
     "\n",
@@ -799,9 +1007,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "97d4be42",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4464d23e-4b54-4c8d-9fb9-6c5ff7262691",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 4.1 - Lineage Tracking (symulacja dla demo)\n",
@@ -862,8 +1081,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a614d99d",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "20b05740-734d-4a85-a826-2abb1a8004d7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -973,8 +1203,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a40d6491",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d4147f5d-f780-4224-81ae-870895eff403",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -1041,8 +1282,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f50fe636",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f10c6706-0824-4dd5-9b37-05c049561cb6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -1111,8 +1363,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "601fcdbf",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f1176f1b-d38e-4a0b-8b7b-1d2d9390606a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -1123,9 +1386,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ee95ced3",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9544be8f-4fdd-4b28-8705-db6415f13d2d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Opcjonalne czyszczenie zasobów testowych\n",
@@ -1144,10 +1418,22 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": null,
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "02_lakeflow_pipelines",
+   "widgets": {}
+  },
   "language_info": {
    "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
