--- a/DZIEN_3_Transformation_Governance_Integrations/05_bi_analytics_integrations.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/05_bi_analytics_integrations.ipynb
@@ -2,8 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9b7ed21a",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "053bbad4-7d29-454f-b690-decad6246012",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "# BI & Analytics Integrations\n",
     "\n",
@@ -18,16 +29,38 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e5e2ae2",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b769044d-c17e-4f51-8e6c-5b3ca9290c67",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Setup i konfiguracja"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1077636e",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e2308753-1e7b-47f5-ac94-6336aedc9324",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Kontekst i wymagania\n",
     "\n",
@@ -40,8 +73,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9580c7ca",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "88f9d0a6-8c62-4b59-a5c3-578fdc9e8034",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Wstęp teoretyczny\n",
     "\n",
@@ -55,17 +99,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3424438",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5486d7b5-d237-4aa2-8d42-1f073fb8c76d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Izolacja per użytkownik"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8848c25a",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f9234e35-8d7f-4f25-bf74-4d670e2570f8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "%run ../00_setup"
@@ -73,17 +139,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "715b75e2",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "bac8b1f4-51f1-4169-bed2-754c62f24bc5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Konfiguracja środowiska"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "83d0e5de",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1069beeb-31fe-471e-ab4c-866e9a5816f7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from pyspark.sql import functions as F\n",
@@ -100,8 +188,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f3bbac0",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b77a91f6-1107-47df-a057-108f3c98e664",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Sekcja 1: Databricks SQL Warehouses\n",
     "\n",
@@ -110,8 +209,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11cae7f2",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f5a6a3aa-7ddc-4ca1-a44d-e07766ca590e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Typy Warehouse'ów\n",
     "\n",
@@ -122,9 +232,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ebbf7163",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "29fefb7c-cfee-4dd4-8e66-78fcc8898227",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład definicji konfiguracji Warehouse (JSON)\n",
@@ -162,8 +283,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d1fcd91",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e186b1a2-ec5e-45db-9574-1461af9e4d3a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Sekcja 2: Databricks Genie (AI/BI)\n",
     "\n",
@@ -172,8 +304,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d7a8f1e",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "14a009bf-7fef-48f0-bdab-c6f3286519a3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przygotowanie danych pod Genie\n",
     "\n",
@@ -182,40 +325,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "75c10fcd",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ee7d21a9-e5f5-4e8e-a7af-dcb3d6d042ca",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
-    "# Dodawanie komentarzy do tabeli Gold (kluczowe dla Genie!)\n",
-    "spark.sql(f\"\"\"\n",
-    "COMMENT ON TABLE {CATALOG}.{GOLD_SCHEMA}.fact_sales IS \n",
-    "'Tabela faktów zawierająca transakcje sprzedaży. Zawiera kwoty, daty i klucze obce do wymiarów.'\n",
-    "\"\"\")\n",
+    "%python\n",
+    "# Add comments to the Gold table and the correct column\n",
+    "spark.sql(\n",
+    "    f\"\"\"\n",
+    "    COMMENT ON TABLE {CATALOG}.{GOLD_SCHEMA}.fact_sales IS \n",
+    "    'Tabela faktów zawierająca transakcje sprzedaży. Zawiera kwoty, daty i klucze obce do wymiarów.'\n",
+    "    \"\"\"\n",
+    ")\n",
     "\n",
-    "spark.sql(f\"\"\"\n",
-    "COMMENT ON COLUMN {CATALOG}.{GOLD_SCHEMA}.fact_sales.total_amount IS \n",
-    "'Całkowita wartość zamówienia w PLN (brutto).'\n",
-    "\"\"\")\n",
+    "spark.sql(\n",
+    "    f\"\"\"\n",
+    "    COMMENT ON COLUMN {CATALOG}.{GOLD_SCHEMA}.fact_sales.net_amount IS \n",
+    "    'Całkowita wartość zamówienia w PLN (brutto).'\n",
+    "    \"\"\"\n",
+    ")\n",
     "\n",
-    "display(spark.createDataFrame([\n",
-    "    (\"Metadane\", \"Zaktualizowane\"),\n",
-    "    (\"Cel\", \"Genie będzie teraz lepiej rozumieć te dane\")\n",
-    "], [\"Status\", \"Wartość\"]))"
+    "display(\n",
+    "    spark.createDataFrame(\n",
+    "        [\n",
+    "            (\"Metadane\", \"Zaktualizowane\"),\n",
+    "            (\"Cel\", \"Genie będzie teraz lepiej rozumieć te dane\")\n",
+    "        ],\n",
+    "        [\"Status\", \"Wartość\"]\n",
+    "    )\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a3d89eb6",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6f7176ff-b998-4d3d-8ad4-cb513a681584",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Sekcja 3: Integracje Zewnętrzne (Power BI & Dremio)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "010d7b3e",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2fd01e92-e201-4114-998a-c9a9a2e3205d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Power BI - Direct Lake vs Direct Query\n",
     "\n",
@@ -225,8 +411,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acb52ae4",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0f93f41d-d34d-482f-ad84-4c415197035f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Dremio - Unity Catalog Iceberg Endpoint\n",
     "\n",
@@ -250,9 +447,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "03e4a9b9",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "564ae2c0-4b35-42d2-ad4e-95ccb7774c5e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Krok 1: Włączenie UniForm podczas tworzenia nowej tabeli\n",
@@ -270,9 +478,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1be4764a",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c72a13ce-6231-49b9-9e3f-694a1b781862",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Krok 2: Włączenie UniForm na istniejącej tabeli (ALTER TABLE)\n",
@@ -288,9 +507,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7c2baeab",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "88724705-374d-495f-8162-365015f18470",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Krok 3: Jeśli tabela ma Deletion Vectors - użyj REORG\n",
@@ -304,9 +534,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b4b3c383",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "86097be9-333f-45f5-954a-8c934459daad",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Krok 4: Sprawdzenie statusu generowania metadanych Iceberg\n",
@@ -317,8 +558,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4afdaf26",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f6855fc2-0c68-47a4-90c2-8e9952916ede",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "#### Konfiguracja Dremio - Unity Catalog Iceberg REST\n",
     "\n",
@@ -348,9 +600,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "68d9944c",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ae7c8601-8257-4618-8321-0075d90fc270",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Ręczna synchronizacja metadanych Iceberg (jeśli automatyczna nie zadziałała)\n",
@@ -359,8 +622,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d519313b",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f5dff20c-3ed5-41a6-bc58-76f97af84982",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "#### Ograniczenia UniForm dla Dremio\n",
     "\n",
@@ -377,8 +651,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fecc694",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "fea25469-cfdb-4f35-b3de-027387cd43b3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przygotowanie dedykowanego widoku\n",
     "\n",
@@ -387,9 +672,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a9d9bfa7",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ec4f0947-a72e-484f-be53-28566f9d7900",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Tworzenie widoku raportowego\n",
@@ -417,9 +713,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9f2e5105",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a5f23285-d258-490a-b582-cfae92f234ae",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Weryfikacja widoku\n",
@@ -428,8 +735,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37a1c197",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0de92d12-30ad-42c0-9ce6-b3a6a69fc551",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Best Practices\n",
     "\n",
@@ -445,8 +763,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1430c831",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "371a586a-92af-4739-ba9f-fa43b89ce867",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Podsumowanie\n",
     "\n",
@@ -457,17 +786,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7482c46",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e0328f8c-b9b8-45cf-b892-9570f5b184e0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Czyszczenie zasobów"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c5cb11e0",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c2d5c92d-4523-467e-942c-866f20c6b9f9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# spark.sql(f\"DROP VIEW IF EXISTS {CATALOG}.{GOLD_SCHEMA}.{view_name}\")\n",
@@ -476,10 +827,22 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": null,
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "05_bi_analytics_integrations",
+   "widgets": {}
+  },
   "language_info": {
    "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
